--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
  
                 <nav>
                     <ul >
-                        <a href="index.php" class="menu"><li class="active">Home</li></a>
-                        <a href="product.php" class="menu"><li>Product</li></a>
+                        <a href="index.html" class="menu"><li class="active">Home</li></a>
+                        <a href="product.html" class="menu"><li>Product</li></a>
                         <a href="#" class="menu"><li>Work</li></a>
                         <a href="#" class="menu"><li>About</li></a>
                         <a href="contact.php" class="menu"><li>Contact</li></a>
