Update and rename contact.php to contact.html

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
  
                 <nav>
                     <ul >
-                        <a href="index.php" class="menu"><li >Home</li></a>
-                        <a href="product.php" class="menu"><li>Product</li></a>
+                        <a href="index.html" class="menu"><li >Home</li></a>
+                        <a href="product.html" class="menu"><li>Product</li></a>
                         <a href="#" class="menu"><li>Work</li></a>
                         <a href="#" class="menu"><li>About</li></a>
                         <a href="#" class="menu"><li class="active">Contact</li></a>
