--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="product.html" class="menu"><li>Product</li></a>
                         <a href="#" class="menu"><li>Work</li></a>
                         <a href="#" class="menu"><li>About</li></a>
-                        <a href="contact.php" class="menu"><li>Contact</li></a>
+                        <a href="contact.html" class="menu"><li>Contact</li></a>
                         
                     </ul>
                 </nav>
