--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- navbar -->
             <div class="navbar">
                 <div class="logo">
-                    <img src="image/logo1.png" alt="">
+                    <img src="logo1.png" alt="">
                 </div>
  
                 <nav>
